@@ -4,6 +4,7 @@ task :cruise do
     mkdir_p out unless File.directory?(out)
   end
   
+  Rake::Task["compile"].invoke
   Rake::Task["spec:rcov"].invoke
   mv 'coverage', "#{out}/all test coverage" if out
 end
