@@ -1,3 +1,12 @@
+== WIP
+
+* added bin/image_science script.
+* added data() method to get image data as a string.
+* crop(), with_crop(), resize(), thumbnail(), cropped_thumbnail() can now all be called without providing a block (modifies the image in-place).
+* resize() now accepts optional filter (see FreeImage::ImageFilters).
+* image_type() can now be called as an instance method.
+* added bmp and tiff files to test suite.
+
 == 1.1.1 / 2010-02-06
 
 * merged changes from scambra/master (depth, colorspace, image_type, colortype, file_type methods)
